# cic-types

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  VERSION  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
cic_types/: __init__.py  condiments.py  error.py  processor.py  validator.py  version.py
cic_types/ext/: requests.py
cic_types/ext/metadata/: __init__.py  base.py  signer.py
cic_types/models/: kyc.py  person.py  tx.py
cic_types/pytest/: __init__.py  metadata.py  person.py  tx.py
cic_types/runnable/: type.py
cic_types/schemas/: kyc.json  load.py  person-v1.json  person.json  person.py  vcard-v1.json  vcard.json
tests/: conftest.py
tests/cic_types/: test_processor.py  test_validator.py
tests/cic_types/ext/: test_base.py  test_signer.py
tests/cic_types/models/: test_kyc.py  test_person.py  test_tx.py
tests/cic_ussd/: test_validator.py
tests/cic_ussd/models/: test_person.py
tests/fixtures/: config.py  data.py  person.py
