[metadata]
name = cic-types
description = Defines descriptors for data objects specific to the CIC-Network.
author =
	Philip Wafula
author_email =
    dev@wafula.me
url = https://gitlab.com/grassrootseconomics/cic-types
keywords =
    cic
    types
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
license = GPL3
licence_files =
	LICENSE.md

[options]
python_requires = >= 3.6
packages =
	cic_types
	cic_types.models
	cic_types.schemas
