[metadata]
name = cic-types
description = Defines descriptors for data objects specific to the CIC-Network.
version = 0.2.3
author =
	Philip Wafula
author_email =
    dev@wafula.me
url = https://gitlab.com/grassrootseconomics/cic-types
keywords =
    cic
    types
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
license = GPL3
licence_files =
	LICENSE.md

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	cic_types
	cic_types.ext
	cic_types.ext.metadata
	cic_types.models
	cic_types.pytest
	cic_types.schemas
	cic_types.runnable

[options.package_data]
* =
	cic_types/schemas/*json


[options.entry_points]
console_scripts =
	cic-ptr = cic_types.runnable.type:main
